# lling-llang

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GLOSSARY.md  Makefile  NOTATION.md  README.md
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: ci.yml
benches/: core_benchmarks.rs
docs/: BIBLIOGRAPHY.md  NOTATION.md  README.md  STYLE.md
docs/acoustic/: overview.md
docs/advanced/: asr-pipeline.md  beam-optimization.md  constrained-decoding.md  ctc-topologies.md  deep-learning.md  differentiable.md  gpu-acceleration.md  simd.md  subsequential-transducers.md  topdown-autograd.md
docs/algorithms/: composition.md  determinization.md  epsilon-removal.md  minimization.md  parsing.md  path-extraction.md  path-sampling.md  rrwm.md  shortest-distance.md  synchronization.md  topological-sort.md  weight-pushing.md
docs/api/: backend-reference.md  lattice-reference.md  layer-reference.md  path-reference.md  semiring-reference.md  wfst-reference.md
docs/architecture/: backends.md  lattice-bridge.md  lattices.md  layers.md  overview.md  power-semiring.md  semirings.md  signed-tropical-semiring.md  symbolic-core-hoist.md  wfst-operations.md  wfst-traits.md
docs/archive/: README.md  industry-standard-and-sota-review.md  journal.md
docs/archive/implementation-ledger/: index.md  phase-2-core-wfst-operations.md  phase-3-determinization-minimization.md  phase-6-differentiable-operations.md
docs/asr/: cascade-construction.md  subword-lexicon.md
docs/correction/: error-models.md  multilingual.md  text-normalization.md
docs/diagrams/: README.md  architecture-map.puml  asr-cascade.puml  correction-pipeline.puml  formal-verification.puml  lattice.puml  render.sh
docs/diagrams/acoustic/: posterior-fusion.puml
docs/diagrams/advanced/: beam-optimization.dot  constrained-decode.puml  ctc-collapse.dot  ctc-compact.dot  ctc-correct.dot  ctc-minimal.dot  ctc-selfless.dot  deep-learning-layers.dot  differentiable-passes.puml  fsm-mask.dot  gpu-csr-layout.dot  gpu-token-recombination.dot  simd-dispatch.puml  simd-lanes.dot  subsequential.dot  topdown-autograd-graph.dot
docs/diagrams/algorithms/: composition-product.dot  determinize-before-after.dot  (+11 more)
docs/integration/: README.md
docs/optimization/: implementation-ledger.md  industry-standard-and-sota-review.md  journal.md  lookahead.md  ngram-backoff.md  token-grouping.md
docs/programming/: api-migration.md  syntax-repair.md
docs/training/: weak-supervision.md
docs/transducers/: README.md  multitape.md  neural-transducer.md  pushdown.md  tree-transducers.md
examples/: profile_topo.rs
proofs/: README.md  verify.sh
proofs/coq/: Makefile  _CoqProject
proofs/doc/: failed-strategies.md  proof-status.md
proofs/tla/: CascadeOrder.tla  LazyComposition.tla  RRWM.tla
proptest-regressions/semiring/: log.txt
src/: lattice_bridge.rs  lib.rs
src/acoustic/: mod.rs
src/algorithms/: connect.rs  determinize.rs  epsilon_removal.rs  minimize.rs  mod.rs  push.rs  queue.rs  rrwm.rs  sample.rs  shortest_distance.rs
src/asr/: cascade.rs  context.rs  dysfluency.rs  factoring.rs  mod.rs  ngram.rs  pronunciation_variants.rs  rescoring.rs  subword_lexicon.rs
src/backend/: hashmap.rs  mod.rs  pathmap.rs  traits.rs
src/cfg/: builder.rs  earley.rs  forest.rs  grammar.rs  mod.rs  types.rs
src/composition/: cfg_fst.rs  filter.rs  fst_fst.rs  materialize.rs  mod.rs
src/ctc/: decoder.rs  mod.rs  topologies.rs
src/differentiable/: forward_score.rs  gradient.rs  layers.rs  marginalization.rs  mod.rs  ngram_pruning.rs  second_order.rs  token_graphs.rs  topdown.rs  viterbi.rs
src/error_models/: confusion.rs  edit_distance.rs  homophone.rs  mod.rs  normalize.rs
src/gpu/: channels.rs  csr.rs  k_vector.rs  load_balance.rs  mod.rs  soft_prune.rs  token_recombine.rs
src/integration/: liblevenshtein_bridge.rs  mod.rs
src/lattice/: algorithms.rs  builder.rs  iterator.rs  lattice.rs  mod.rs  types.rs
src/layers/: cfg_filter.rs  confusion.rs  disfluency.rs  edit_distance.rs  lm_rerank.rs  mettail_type.rs  mod.rs  phonetic_rescore.rs  pos_tagging.rs  traits.rs
src/llm/: mod.rs  symbolic_decoder.rs
src/multilingual/: code_switch.rs  language.rs  mod.rs
src/multitape/: builder.rs  label.rs  mod.rs  project.rs  synchronize.rs  traits.rs  transition.rs  vector.rs
src/optimization/: log_push.rs  lookahead.rs  mod.rs  ngram_backoff.rs  token_group.rs
src/path/: adjacency.rs  beam.rs  mod.rs  nbest.rs  viterbi.rs
src/programming/: api_migration.rs  mod.rs  repair.rs  token.rs  traits.rs
src/pushdown/: builder.rs  decode.rs  mod.rs  stack.rs  traits.rs  transition.rs  vector.rs
src/semiring/: boolean.rs  count.rs  edit.rs  expectation.rs  godel.rs  lexicographic.rs  log.rs  mod.rs  power.rs  probability.rs  product.rs  quantized.rs  set.rs  signed_tropical.rs  string.rs  traits.rs  tropical.rs
src/simd/: mod.rs
src/subsequential/: mod.rs
src/symbolic/: algebra_tower.rs  any_algebra.rs  behavioral_algebra.rs  behavioral_pred.rs  bisimulation.rs  collection_algebra.rs  kat_algebra.rs  lattice_theory.rs  logict.rs  logict_smt.rs  mod.rs  ordered_field.rs  presburger.rs  product_nary.rs  regex_sfa.rs  sfa.rs  sft.rs  string_algebra.rs  sym_tree.rs  sym_tree_transducer.rs
src/test_utils/: arbitrary.rs  assertions.rs  fixtures.rs  language.rs  mod.rs
src/text_processing/: mod.rs
src/training/: lfmmi.rs  mod.rs  pruned.rs  weak_supervision.rs
src/transducer/: decoding.rs  joiner.rs  lattice.rs  loss.rs  mod.rs  traits.rs
src/tree_transducers/: alphabet.rs  builder.rs  mod.rs  rule.rs  transducer.rs  tree.rs  types.rs
src/wfst/: lazy.rs  mod.rs  rational.rs  state.rs  synchronize.rs  traits.rs  transition.rs  types.rs  unary.rs  vector.rs
tests/: algorithm_properties_test.rs  composition_test.rs  differentiable_test.rs  end_to_end_pipeline_test.rs  known_bugs_test.rs  lattice_pipeline_test.rs  semiring_properties_test.rs  semiring_trait_verification_test.proptest-regressions  semiring_trait_verification_test.rs  union_zipper_lling_llang_tests.rs  wfst_properties_test.rs
(+158 files in other folders)
