[package]
name = "lling-llang"
version = "0.2.0"
edition = "2021"
# `div_ceil` (integer) is used across gpu/load_balance, llm token-masking, and the
# quantized semiring; it stabilized in Rust 1.73, so 1.73 is the true MSRV.
rust-version = "1.73"
authors = ["Dylon Edwards <dylon.edwards@f1r3fly.io>"]
description = "WFST framework for text normalization and grammar correction"
license = "Apache-2.0"
repository = "https://github.com/vinary-tree/lling-llang"
keywords = ["wfst", "lattice", "cfg", "text-normalization", "grammar-correction"]
categories = ["text-processing", "algorithms"]

[dependencies]
# Core dependencies (optional - for liblevenshtein integration)
liblevenshtein = { path = "../liblevenshtein-rust", version = "0.9", optional = true }
libdictenstein = { path = "../libdictenstein", version = "0.2", optional = true }
# Shared lattice trait (join/meet) leaf crate — for the semiring↔lattice bridge
llattice = { path = "../llattice", version = "0.1", optional = true }

# Concurrent hash map for caching
dashmap = { version = "6.1", optional = true }

# F1R3FLY.io dependencies (optional)
pathmap = { version = "0.2", optional = true }

# Data structures
smallvec = { version = "1.11", features = ["union"] }
indexmap = "2.0"
ahash = "0.8"
rustc-hash = "1.1"

# Numerics
ordered-float = "4.0"

# Symbolic-automata + algebra-tower core (hoisted from prattail, Task #21 / ADR-018).
# Non-optional, default-on (no feature gates): the `symbolic` module is unconditional.
num-bigint = "0.4"
num-rational = { version = "0.4", features = ["num-bigint-std"] }
num-traits = "0.2"
moniker = { version = "0.5", features = ["moniker-derive"] }

# SMT `ConstraintTheory` backend (Task #22 / ADR-018, §4-B). The Z3 *library*
# (dynamically linked against the system libz3) is in-process — in-boundary for
# in-process use; the cvc5/Z3 *CLI* certificate path lives in the WFST sidecar.
# Non-optional, default-on (no feature gate); availability is probed at runtime via
# `symbolic::logict_smt::z3_available()` so a solver-less host still links and runs.
z3 = "0.12"

# Random number generation for path sampling
rand = "0.9"
regex = "1"
regex-automata = "0.4"
rayon = { version = "1.11", optional = true }

# Hashing
blake3 = "1.5"

# Serialization (optional)
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "1.3", optional = true }

# Proptest fixtures and strategies (optional; used by the test-utils feature).
proptest = { version = "1.4", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
# Default: standalone WFST framework with no external dependencies
default = []

# === Core Optional Features ===
# Integration with liblevenshtein for lexical correction
levenshtein = ["dep:liblevenshtein", "dep:libdictenstein", "dep:rayon"]

# libdictenstein lattice bridge: lling-llang semirings as dictionary values (cycle-break)
lattice = ["dep:llattice", "dep:libdictenstein"]
# ...with serde-bounded DictionaryValue for disk-backed (persistent-artrie) dictionaries
lattice-persistent = ["lattice", "libdictenstein/persistent-artrie", "dep:serde"]

# Probabilistic CFG support
pcfg = []

# Predefined error grammars (English, etc.)
error-grammar = []

# === Extension Layers ===
# POS tagging layer
pos-tagging = []

# Language model reranking layer
lm-rerank = []

# Phonetic rescoring layer (requires liblevenshtein with phonetic rules)
# Also needs serialization for serde support in phonetic types
phonetic-rescore = ["levenshtein", "dep:dashmap", "liblevenshtein?/embedded-rules", "liblevenshtein?/serialization"]

# Code correction layer (pattern-aware syntax recovery)
code-correction = []

# LaTeX syntax correction layer (CFG-based filtering, structural validation, repairs)
latex-syntax = []

# MathML semantic layer (type checking, homoglyph disambiguation)
mathml-semantic = []

# === F1R3FLY.io Integration (optional) ===
# Full F1R3FLY.io stack: PathMap, MORK, MeTTaTron, MeTTaIL
f1r3fly = ["dep:pathmap", "levenshtein", "sexpr"]

# S-expression path format for MORK compatibility
sexpr = []

# PathMap-optimized backend (part of f1r3fly)
pathmap-backend = ["dep:pathmap", "levenshtein", "liblevenshtein?/pathmap-backend"]

# === Serialization ===
serde = ["dep:serde", "liblevenshtein?/serde"]
bincode-ser = ["dep:bincode", "serde"]

# === Testing ===
# Expose the test_utils module (proptest strategies, fixtures) to downstream crates.
test-utils = ["dep:proptest"]

[[bench]]
name = "core_benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
